# practice-dash

./: .gitignore  Pipfile  README.md  app.py  notes.md  pyproject.toml  scaterplot.py
00_get_started/: 1.basic.py  2.table.py  3.scaterplot.py  4.markdown.py  5.core_components.py  basic.py  core_components.py
01_callbacks/: 1.simple.py  2.dynamic_scaterplot.py  3.multiple_inputs.py  4.multiple_outputs.py  5.chained_callbacks.py  dynamic_scaterplot.py  multiple_inputs.py  simple.py
02_interactive/: 1.graph_values.py  2.update_onHover.py  3.crossfilter_recipe.py  crossfilter_recipe.py
02_state/: simple_state.py
03_interactive/: graph_values.py
04_beyond_basics/: multi_page_apps.py
1.dash_tutorial/1.layout/: 2.table.py  3.scaterplot.py  5.core_components.py
1.dash_tutorial/2.callbacks/: 3.multiple_inputs.py  4.multiple_outputs.py  6.simple_state.py  7.comps_instead_id.py
1.dash_tutorial/4.sharing_data/: 1.storing_data_in_browser.py
2.callbacks/1.advanced_callbacks/: 1.catching_errors.py
3.beyond_basics/4.multi_page/: app.py
3.beyond_basics/4.multi_page/0.no_pages/1.simple/: app.py
3.beyond_basics/4.multi_page/0.no_pages/2.different/: app.py
3.beyond_basics/4.multi_page/0.no_pages/3.dynamic/: app.py
3.beyond_basics/4.multi_page/1.layout/pages/: archive.py
3.beyond_basics/4.multi_page/2.sidebar/: app.py
3.beyond_basics/4.multi_page/4.variable_path/: app.py
3.beyond_basics/4.multi_page/5.nested_pages/: app.py
3.beyond_basics/4.multi_page/6.multiple_one_file/: app.py
3.beyond_basics/4.multi_page/pages/: analytics.py  archive.py  home.py
(+13 files in other folders)
