[tool.poetry]
name = "practice-dash"
version = "0.1.0"
description = ""
authors = ["Sabin Purice <sabin.purice@gmail.com>"]
readme = "README.md"
packages = [{include = "practice_dash"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.7.0"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
bpython = "^0.23"
windows-curses = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
